<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SignUpActivity">


        <EditText
            android:id="@+id/editText_name_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/too_big_dimen"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="@dimen/too_big_dimen"
            android:hint="@string/name_signUp_hint"
            android:inputType="text"
            android:paddingTop="@dimen/medium_dimen"
            android:paddingBottom="@dimen/medium_dimen" />

        <EditText
            android:id="@+id/editText_email_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/too_big_dimen"
            android:layout_marginTop="@dimen/medium_dimen"
            android:layout_marginEnd="@dimen/too_big_dimen"
            android:hint="@string/email_signUp_hint"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/medium_dimen"
            android:paddingBottom="@dimen/medium_dimen" />
        <EditText
            android:id="@+id/editText_password_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/too_big_dimen"
            android:layout_marginTop="@dimen/medium_dimen"
            android:layout_marginEnd="@dimen/too_big_dimen"
            android:hint="@string/password_signUp_hint"
            android:inputType="textPassword"
            android:paddingTop="@dimen/medium_dimen"
            android:paddingBottom="@dimen/medium_dimen" />

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_button_background"
            android:enabled="false"
            android:layout_marginStart="@dimen/too_big_dimen"
            android:layout_marginTop="@dimen/big_dimen"
            android:layout_marginEnd="@dimen/too_big_dimen"
            android:paddingStart="@dimen/medium_dimen"
            android:paddingTop="@dimen/medium_dimen"
            android:paddingEnd="@dimen/medium_dimen"
            android:paddingBottom="@dimen/medium_dimen"
            android:text="@string/signUp_button"
            android:textSize="@dimen/medium_textSize"
            android:textColor="@color/sign_up_button_text_status"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>


    </LinearLayout>
</layout>